bakkie_derive/tests/ui/fail/app_with_const_param.rs
use bakkie_derive::tool;

#[tool]
async fn my_tool(#[app] app: App<42>) -> Result<String, String> {
    Ok("test".to_string())
}

fn main() {}